--- a/.graphqlconfig
+++ b/.graphqlconfig
@@ -1,16 +1,15 @@
 {
-  "schema": {
-    "file": "backend/src/generated/prisma.graphql"
-  },
-  "endpoints": [
-    {
-      "name": "Default (http://localhost:4444)",
-      "url": "http://localhost:4444",
-      "options": {
+  "name": "Untitled GraphQL Schema",
+  "schemaPath": "schema.graphql",
+  "extensions": {
+    "endpoints": {
+      "Default GraphQL Endpoint": {
+        "url": "http://localhost:8080/graphql",
         "headers": {
           "user-agent": "JS GraphQL"
-        }
+        },
+        "introspect": false
       }
     }
-  ]
+  }
 }
