--- a/backend/variables.env
+++ b/backend/variables.env
@@ -4,3 +4,7 @@ PRISMA_SECRET="dasdadasd3121jdlkaskl"
 APP_SECRET="jwtsecret123"
 STRIPE_SECRET="sk_123youchanget his"
 PORT=4444
+MAIL_HOST="smtp.mailtrap.io"
+MAIL_PORT=2525
+MAIL_USER="4f177b027cffac"
+MAIL_PASS="4492616739fd55"
