--- a/backend/variables.env
+++ b/backend/variables.env
@@ -2,7 +2,7 @@ FRONTEND_URL="http://localhost:7777"
 PRISMA_ENDPOINT="https://eu1.prisma.sh/hostsf-9830ba/sicccccck-fits/dev"
 PRISMA_SECRET="dasdadasd3121jdlkaskl"
 APP_SECRET="jwtsecret123"
-STRIPE_SECRET="sk_123youchanget his"
+STRIPE_SECRET="sk_test_aS66bmhoVfQ5OabycHs1Qbwp00q67NhM3D"
 PORT=4444
 MAIL_HOST="smtp.mailtrap.io"
 MAIL_PORT=2525
